fix overflow

--- a/frontend/components/debug-box.scss
+++ b/frontend/components/debug-box.scss
@@ -2,6 +2,7 @@
     padding: 30px;
     width: 300px;
     background: white;
+    overflow: auto;
 }
 
 .entryWrapper {
