--- a/frontend/components/side-panel.scss
+++ b/frontend/components/side-panel.scss
@@ -1,5 +1,6 @@
 .sidePanel {
     position: relative;
+    overflow: auto;
 
     .toggleButton {
         position: absolute;
